@@ -24,19 +24,19 @@ public class MainCustomerSiteController {
 
     @GetMapping("/customer/mainCustomerSite")
     public String getMainCustomerSite(Model model) {
-        Restaurant restaurant = new Restaurant(
-                1,
-                "rest",
-                List.of(
-                        new Meal(1, "asd", null, null, "asd", "asd"),
-                        new Meal(2, "asd2", null, null, "asd2", "asd2")
-                ),
-                new ArrayList<Delivery>(),
-                null,
-                null
-        );
-        model.addAttribute("restaurantList", Collections.singletonList(restaurant));
-        //model.addAttribute("restaurantList", restaurantRepository.findAll());
+//        Restaurant restaurant = new Restaurant(
+//                1,
+//                "rest",
+//                List.of(
+//                        new Meal(1, "asd", null, null, "asd", "asd"),
+//                        new Meal(2, "asd2", null, null, "asd2", "asd2")
+//                ),
+//                new ArrayList<Delivery>(),
+//                null,
+//                null
+//        );
+//        model.addAttribute("restaurantList", Collections.singletonList(restaurant));
+        model.addAttribute("restaurantList", restaurantRepository.findAll());
         return "customer/mainCustomerSite";
     }
 }
